# marketplace-api-websocket

./: .gitignore  README.md  pyproject.toml
app/: alembic.ini  config.py  db.py  main.py
app/alembic/: env.py
app/alembic/versions/: e97518670c85_init.py
app/celery/: celery_app.py  email_tasks.py
app/dependencies/: auth.py
app/models/: __init__.py  chatroom.py  message.py  order.py  product.py  user.py
app/routes/: chatroom_router.py  order_router.py  product_router.py  user_router.py
app/schemas/: order_schema.py  product_schema.py  user_schema.py
app/services/: order_service.py  product_service.py  user_service.py
app/tests/: conftest.py  test_orders.py  test_products.py  test_users.py
app/utils/: security.py
